# genai_job_finder

./: .dockerignore  .env.example  .env.production  .gitignore  DATA_CLEANER_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.light  LLM_CONFIG_README.md  MOVED_FILES_SUMMARY.md  Makefile  NEW_MODELS_ADDED.md  README.md  debug_parser.py  demo_enhanced_parser.py  deploy.sh  docker-compose.yml  docker-push.sh  example_usage.py  jobs.db  pyproject.toml  quick_demo.py  run_enhanced_frontend.sh  run_frontend.sh  run_parser.py  test-deployment.sh  test_data_cleaner.py  test_jobs.db
examples/: data_cleaner_demo.py
genai_job_finder/: __init__.py  llm_config.py  llm_factory.py
genai_job_finder/data_cleaner/: README.md  __init__.py  config.py  graph.py  llm.py  models.py  run_graph.py
genai_job_finder/data_cleaner/chains/: __init__.py  employment_validation.py  experience_extraction.py  location_validation.py  salary_extraction.py
genai_job_finder/data_cleaner/nodes/: __init__.py  employment_validation.py  experience_extraction.py  location_validation.py  (+2 more)
genai_job_finder/frontend/: README.md  REFACTORING.md  __init__.py  app.py  app_refactored.py  config.py  run.py
genai_job_finder/legacy/: config.py  job_scraper.py  utils.py  vectorestore.py
genai_job_finder/linkedin_parser/: __init__.py  company_enrichment.py  company_parser.py  config.py  config_manager.py  database.py  job_scraper.py  models.py  parser.py  run_parser.py
genai_job_finder/query_definition/: __init__.py  chain.py  config.py  models.py  parser.py  prompts.py  run_query_definition.py  service.py  utils.py
linkedin_parser/: config.py  parser.py
notebooks/: genai_job_finder_complete.ipynb  job_analysis.ipynb  linkedin_jobs.ipynb  playground_create_vector_store_langgraph_jobs.ipynb  query_definition.ipynb
(+12 files in other folders)
