[project]
name = "genai-job-finder"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Zarreh",email = "alireza.zarreh@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.5,<0.7.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "linkedin-jobs-scraper (>=5.0.2,<6.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
