# This section is not needed for Poetry - using [tool.poetry.dependencies] instead
[project]
name = "genai-job-finder"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Zarreh",email = "alireza.zarreh@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
langchain = "^0.3.0"
langgraph = "^0.6.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-ollama = "^0.3.0"
langchain-chroma = "^0.2.0"
python-docx = "^1.1.0"
pypdf2 = "^3.0.0"
isort = "^5.12.0"
streamlit = "^1.48.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^24.0.0"
mypy = "^1.5.0"
ipykernel = "^6.30.1"
